se ajusto los formularios de registro y los botones de volver

--- a/src/app/componentes/login-hijo/login-hijo.component.html
+++ b/src/app/componentes/login-hijo/login-hijo.component.html
@@ -1,9 +1,14 @@
 
 
+<button type="button" class="boton_volver mover_boton" (click)="volverPantalla()">Volver</button>
+
 <div class="contenedor_login"  [ngStyle]="{ 'background-image' :  'url(' + imagenHijo +')' }">
-    
+
     <div class="mascara_encima"></div>
     <div class="contenedor_formulario">
+
+        
+        
         <form>
             <h1 class="titulo_login">Login <span class="txt_impac">{{ usuarioHijo }}</span></h1>
            
