--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -9,6 +9,8 @@
                 <h2 class="titulo1">Busco</h2>
                 <h3 class="titulo2">servicios</h3>
                 <button type="button" class="boton1" routerLink="/servicios">Buscar</button>
+                <button type="button" class="boton2" routerLink="/registrarCliente">Registrarme como cliente</button>
+
                 <button type="button" class="boton2" [routerLink]="['/loginCliente']">Login</button>
             </div>
         </div>
@@ -17,7 +19,7 @@
             <div class="contenedor_titulo_boton">
                 <h2 class="titulo1">Ofresco</h2>
                 <h3 class="titulo2">servicios</h3>
-                <button type="button" class="boton1 fondo_azul"  [routerLink]="['/RegistrarTrabajador']">Registrarme</button>
+                <button type="button" class="boton1 fondo_azul"  [routerLink]="['/RegistrarTrabajador']">Registrarme como trabajador</button>
                 <button type="button" class="boton2 border_azul" [routerLink]="['/loginTrabajador']">Login</button>
             </div>
         </div>
