--- a/src/app/paginas/login-admin/login-admin.component.html
+++ b/src/app/paginas/login-admin/login-admin.component.html
@@ -3,6 +3,7 @@
 <app-login-hijo
     [usuarioHijo] ="usuarioADMIN"
     [imagenHijo] = "imagenAdmin"
+    (clickHijo)="volverPantalla()"
 >
 
 </app-login-hijo>
