--- a/src/app/paginas/login-cliente/login-cliente.component.html
+++ b/src/app/paginas/login-cliente/login-cliente.component.html
@@ -2,6 +2,7 @@
 
 <app-login-hijo [imagenHijo]="imagenFondoClientes"
                    [usuarioHijo]="usuarioCliente"
+                   (clickHijo)="volverPantalla()"
 ></app-login-hijo>
 
 
