--- a/src/app/paginas/login-trabajador/login-trabajador.component.html
+++ b/src/app/paginas/login-trabajador/login-trabajador.component.html
@@ -1,6 +1,8 @@
 
 <app-navbar></app-navbar>
 
+
 <app-login-hijo [imagenHijo]="imagenPadre"
                    [usuarioHijo]="usuarioTrabajador"
+                   (clickHijo)="volverPantalla()"
 ></app-login-hijo>
