--- a/src/app/componentes/login-hijo/login-hijo.component.css
+++ b/src/app/componentes/login-hijo/login-hijo.component.css
@@ -17,15 +17,7 @@
   margin-top: 30px;
 }
 
-.texto_input{
-    font-family: 'OpenSans-Regular';
-    font-weight: 500;
-    color: #1fc6d7;
-    margin-top: 18px;
-    margin-bottom: 4px;
-    font-size: 15px;
-    line-height: 20px;
-}
+
 
 .titulo_login{
     font-family: 'OpenSans-Regular';
@@ -35,16 +27,19 @@
     font-size: 32px;
 }
 
-.mascara_encima {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    background-color: #000000d9;
-    z-index: 1;
-}
+
 
 .txt_impac {
     font-family: 'impact';
     color: #fff;
     font-size: 41px;
+}
+
+.mover_boton{
+
+    top: 95px;
+    position: relative;
+    z-index: 2;
+    left: 84px;
+
 }
