--- a/src/app/paginas/registrar-trabajador/registrar-trabajador.component.html
+++ b/src/app/paginas/registrar-trabajador/registrar-trabajador.component.html
@@ -1,4 +1,116 @@
 <app-navbar></app-navbar>
 
 
-<p>registrar-trabajador works!</p>
+<div class="contenedor_registros">
+    <!--<div _ngcontent-ckj-c7="" class="mascara_encima"></div>-->
+    <form class="formulario_registro">
+        <button type="button" class="boton_volver mover_boton" (click)="volverPantalla()">Volver</button>
+        <div class="row">
+            <h1 class="titulo_login">Registro <span class="txt_impac">Trabajador</span></h1>
+            <div class="col-md-6 padding_columna">
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">Nombre Completo</label>
+                    <input type="text" class="form-control  borde_formulario" placeholder="Escriba su nombre completo"/>
+                </div>
+
+                 <div class="form-group">
+                    <label class="texto_input txt_cliente">Edad</label>
+                    <select class="form-control contenedor_edad borde_formulario">
+                        <option>Seleccione edad</option>
+                        <option *ngFor="let edad of edades" [value]="edad">{{ edad }}</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">Documento</label>
+                    <input type="text" class="form-control  borde_formulario" placeholder="Escriba su numero de documento"/>
+                </div>
+
+                 <div class="form-group">
+                    <label class="texto_input txt_cliente">genero</label>
+                    <select class="form-control borde_formulario">
+                        <option class="opciones">Seleccione el genero</option>
+                        <option value="hombre" class="opciones">Hombre</option>
+                        <option value="mujer" class="opciones">Mujer</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">departamento</label>
+                    <select class="form-control  borde_formulario">
+                        <option>Seleccione su departamento</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">ciudad</label>
+                    <select class="form-control  borde_formulario">
+                        <option>Seleccione su ciudad</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">Tipo de sangre</label>
+                    <select class="form-control  borde_formulario">
+                        <option>Seleccione su ciudad</option>
+                        <option>O+</option>
+                        <option>O-</option>
+                        <option>A+</option>
+                        <option>A-</option>
+                    </select>
+                </div>
+
+              
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">Foto de persona</label>
+                    <input type="file" class="form-control  borde_formulario"/>
+                </div>
+
+
+             </div>
+                
+            <div class="col-md-6 padding_columna">
+                 
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">documento HV</label>
+                    <input type="file" class="form-control  borde_formulario"/>
+                </div>
+
+
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">documento Antecedentes</label>
+                    <input type="file" class="form-control  borde_formulario"/>
+                </div>
+
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">Telefono</label>
+                    <input type="text" class="form-control  borde_formulario" placeholder="Escriba su telefono"/>
+                </div>
+           
+
+                 <div class="form-group">
+                    <label class="texto_input txt_cliente">email</label>
+                    <input type="text" class="form-control  borde_formulario" placeholder="Escriba su email"/>
+                </div>
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">password</label>
+                    <input type="password" class="form-control  borde_formulario" placeholder="Escriba su contraseña"/>
+                </div>
+
+                 <div class="form-group">
+                    <label class="texto_input txt_cliente">certificado EPS</label>
+                    <input type="file" class="form-control  borde_formulario"/>
+                </div>
+                
+                <div class="form-group">
+                    <label class="texto_input txt_cliente">Contacto de emergencia</label>
+                    <input type="text" class="form-control  borde_formulario" placeholder="Escribe tu direccion de residencia"/>
+                </div>
+               
+                <div class="form-group">
+                   <button class="registro">Registrarse</button>
+                </div>
+            </div>
+        </div>
+    </form>
+
+</div>
