--- a/src/styles.css
+++ b/src/styles.css
@@ -93,6 +93,7 @@
     font-size: 14px;
     width: 100%;
     font-family: 'OpenSans-Regular';
+    color: #686868;
 
 }
 
@@ -107,4 +108,22 @@
     border-radius: 4px;
     position: relative;
     top: 0px;
+}
+
+.texto_input{
+    font-family: 'OpenSans-Regular';
+    font-weight: 500;
+    color: #1fc6d7;
+    margin-top: 18px;
+    margin-bottom: 4px;
+    font-size: 15px;
+    line-height: 20px;
+}
+
+.mascara_encima {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background-color: #000000d9;
+    z-index: 1;
 }
