se dejo el proyecto listo  y avanzado listo para descansar unos dias

--- a/src/app/componentes/tarjetas/tarjetas.component.html
+++ b/src/app/componentes/tarjetas/tarjetas.component.html
@@ -2,6 +2,6 @@
 
     <h2 class="nombre_persona">Camilo amaya</h2>
     <div class="contenedor_foto_persona"></div>
-    <p class="txt_ver_perfil">Ver perfil</p>
-    <p class="ver_servicios">Ver Servicios</p>
+    <p class="txt_ver_perfil" (click)="verPerfil()">Ver perfil</p>
+    <p class="ver_servicios"  (click)="verServicios( 1 )">Ver Servicios</p>
 
