--- a/src/app/componentes/tarjetas/tarjetas.component.html
+++ b/src/app/componentes/tarjetas/tarjetas.component.html
@@ -1,7 +1,7 @@
 
 
-    <h2 class="nombre_persona">Camilo amaya</h2>
+    <h2 class="nombre_persona">{{ informacionPerfil.nombres }}</h2>
     <div class="contenedor_foto_persona"></div>
-    <p class="txt_ver_perfil" (click)="verPerfil()">Ver perfil</p>
-    <p class="ver_servicios"  (click)="verServicios( 1 )">Ver Servicios</p>
+    <p class="txt_ver_perfil" (click)="verPerfil( informacionPerfil )">Ver perfil</p>
+    <p class="ver_servicios"  (click)="verServicios( informacionPerfil )">Ver Servicios</p>
 
