--- a/src/app/paginas/ver-servicios/ver-servicios.component.html
+++ b/src/app/paginas/ver-servicios/ver-servicios.component.html
@@ -2,7 +2,7 @@
 <app-navbar></app-navbar>
 
 <div class="contenedor_perfil_servicios">
-    <button class="boton_volver posicion_volver" [routerLink]="['servicios']">Volver</button>
+    <button class="boton_volver posicion_volver" (click)="volverPantalla()">Volver</button>
     <div class="row">
         <div class="col-md-2">
             <div class="foto_perfil"></div>
